--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Valkyrie Alerts with Ping Δ</title>
+  <title>Valkyrie Alerts Test</title>
   <style>
     body { background: #2f3136; color: #eee; font-family: sans-serif;
       display: flex; height: 100vh; justify-content: center; align-items: center; }
@@ -88,7 +88,6 @@
           embeds: [embed]
         })
       });
-      alert('✅ Embed sent!');
     }
   </script>
 </body>
